debugged CF's .travis.yml -> last push to check whether Travis CI is working ok (hopefully? ^_^)

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ cache:
     - $HOME/.sbt
 
 script:
-  - sbt 'set parallelExecution in ThisBuild := false' clean coverage test coverageReport && sbt coverageAggregate
+#  - sbt 'set parallelExecution in ThisBuild := false' clean coverage test coverageReport && sbt coverageAggregate
+  - sbt clean compile test
 
 after_success:
   - sbt scalafmtCheck
